Feature/12 run oft trace from the plugin (#15)
#12: Run OFT trace from the plugin